RESOLVED FIXED 74090
[Qt] WebKitTestRunner crashes with debug builds
https://bugs.webkit.org/show_bug.cgi?id=74090
Summary [Qt] WebKitTestRunner crashes with debug builds
Simon Hausmann
Reported 2011-12-08 07:40:49 PST
Backtrace indicates missing initializeThreading() call on the uiprocess side: Program received signal SIGSEGV, Segmentation fault. 0x00007ffff7fc1f79 in WTF::ThreadIdentifierData::identifier () at /home/shausman/src/webkit/trunk/Source/JavaScriptCore/wtf/ThreadIdentifierDataPthreads.cpp:65 65 ASSERT(m_key != PTHREAD_KEYS_MAX); (gdb) bt #0 0x00007ffff7fc1f79 in WTF::ThreadIdentifierData::identifier () at /home/shausman/src/webkit/trunk/Source/JavaScriptCore/wtf/ThreadIdentifierDataPthreads.cpp:65 #1 0x00007ffff7fc28ab in WTF::currentThread () at /home/shausman/src/webkit/trunk/Source/JavaScriptCore/wtf/ThreadingPthreads.cpp:253 #2 0x00007ffff791f34d in WTF::ThreadRestrictionVerifier::setShared (this=0x465e00, shared=true) at ../../../../Source/JavaScriptCore/wtf/ThreadRestrictionVerifier.h:109 #3 0x00007ffff791f48a in WTF::RefCountedBase::ref (this=0x465df8) at ../../../../Source/JavaScriptCore/wtf/RefCounted.h:48 #4 0x00007ffff793b46c in WKRetain (typeRef=0x465df0) at /home/shausman/src/webkit/trunk/Source/WebKit2/Shared/API/c/WKType.cpp:41 #5 0x0000000000411b1d in WebKit::WKRetainPtr<OpaqueWKString const*>::operator= (this=0x4664d8, optr=0x465df0) at ../../../../Source/WebKit2/UIProcess/API/cpp/WKRetainPtr.h:157 #6 0x00000000004115cc in WTR::TestController::initializeInjectedBundlePath (this=0x4664b0) at /home/shausman/src/webkit/trunk/Tools/WebKitTestRunner/qt/TestControllerQt.cpp:119 #7 0x0000000000412c12 in WTR::TestController::initialize (this=0x4664b0, argc=2, argv=0x7fffffffe188) at /home/shausman/src/webkit/trunk/Tools/WebKitTestRunner/TestController.cpp:285 #8 0x00000000004122cc in WTR::TestController::TestController (this=0x4664b0, argc=2, argv=0x7fffffffe188) at /home/shausman/src/webkit/trunk/Tools/WebKitTestRunner/TestController.cpp:81 #9 0x000000000040a399 in Launcher::launch (this=0x7fffffffe030) at /home/shausman/src/webkit/trunk/Tools/WebKitTestRunner/qt/main.cpp:55
Attachments
[Qt] WebKitTestRunner crashes with debug builds (3.84 KB, patch)
2011-12-08 07:42 PST, Simon Hausmann
vestbo: review+
Simon Hausmann
Comment 1 2011-12-08 07:42:12 PST
Created attachment 118388 [details] [Qt] WebKitTestRunner crashes with debug builds
Simon Hausmann
Comment 2 2011-12-08 07:47:10 PST
Csaba Osztrogonác
Comment 3 2011-12-08 08:23:12 PST
*** Bug 74092 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.