[Qt] WebKitTestRunner crashes with debug builds https://bugs.webkit.org/show_bug.cgi?id=74090

Reviewed by Tor Arne Vestbø.

Source/WebKit2:

Export private C++ API style platformInitialize function needed
by low-level WTR.

* UIProcess/API/qt/qquickwebview.cpp:
(QQuickWebView::platformInitialize):
* UIProcess/API/qt/qquickwebview_p.h:

Tools:

* WebKitTestRunner/qt/TestControllerQt.cpp:
(WTR::TestController::platformInitialize): Call QQuickWebView::platformInitialize
to ensure WTF/JSC threading is initialized.

Canonical link: https://commits.webkit.org/90755@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102340 268f45cc-cd09-0410-ab3c-d52691b4dbfc